# front/src/gen/api/api.ts
@@ -1,3 +1,5 @@
+export * from './masterFormController.service';
+import { MasterFormControllerService } from './masterFormController.service';
 export * from './sampleFormController.service';
 import { SampleFormControllerService } from './sampleFormController.service';
-export const APIS = [SampleFormControllerService];
+export const APIS = [MasterFormControllerService, SampleFormControllerService];
