# front/src/gen/model/models.ts
@@ -1,2 +1,3 @@
+export * from './masterForm';
 export * from './sampleForm';
 export * from './validationError';
